# Tianshi

./: Cargo.toml  README.md  build.rs  index.html  rust-toolchain.toml
.github/workflows/: deploy.yml
assets/: factory.json  pile.json  trinity.json
shaders/: Cargo.toml
shaders/laser/: Cargo.toml
shaders/laser/src/: lib.rs
shaders/point_cloud/: Cargo.toml
shaders/point_cloud/src/: lib.rs
shaders/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: actor.rs  animation.rs  app.rs  controller.rs  data.rs  error.rs  glitch.rs  laser.rs  lib.rs  main.rs  model.rs  render.rs  render.wgsl
