[workspace]
members = ["shared", "shaders"]
resolver = "3"

[workspace.dependencies]
bytemuck = { version = "1", default-features = false }
glam = { version = "0.32", default-features = false }
shaders = { path = "shaders" }
shared = { path = "shared" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git" }

[workspace.package]
version = "0.1.0"
authors = ["Sieluna <seele.peng@gmail.com>"]
edition = "2024"
repository = "https://github.com/Sieluna/Tianshi"

[package]
name = "tianshi"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["executor"] }
glam = { workspace = true, features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = ["hdr", "png"] }
log = { version = "0.4", default-features = false }
rand = { version = "0.9", default-features = false, features = ["os_rng", "std", "thread_rng"] }
shaders.workspace = true
shared.workspace = true
thiserror = { version = "2", default-features = false, features = ["std"] }
wgpu = { version = "28", default-features = false, features = ["parking_lot", "spirv", "std", "vulkan", "webgpu", "wgsl"] }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", default-features = false }
console_log = { version = "1", default-features = false }
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
wasm-bindgen-futures = { version = "0.4", default-features = false, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
pollster = { version = "0.4", default-features = false }

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
